--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <img id="app-icon" src="path/to/your/app-icon.png" alt="Desert Runner Icon">
+    <img id="app-icon" src="logo.png" alt="Logo">
     <h1>Desert Runner</h1>
     <p>Join Eagle as he embarks on an endless desert adventure. Journey across tumultuous desert hills, whilst collecting sun coins to help Eagle achieve a high score.</p>
 </body>
